--- a/refined.cabal
+++ b/refined.cabal
@@ -72,12 +72,13 @@ library
   default-language:
     Haskell2010
   build-depends:
-      base             >= 4.9.1 && < 4.14
+      base             >= 4.9.1 && < 4.15
     , deepseq          >= 1.4 && < 1.5
     , exceptions       >= 0.8 && < 0.11
-    , mtl              >= 2.2.1 && < 2.3
-    , prettyprinter    >= 1.1.0.1 && < 1.4
+    , mtl              >= 2.2.2 && < 2.3
+    , prettyprinter    >= 1.1.0.1 && < 1.7
     , template-haskell >= 2.9 && < 2.16
+    , text             >= 1.2 && < 1.3
     , transformers     >= 0.5 && < 0.6
   if flag(aeson)
     build-depends: aeson >= 0.9 && < 1.5
